sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: not found: value cuseur
		if(plusPetit(curseur-1,cuseur) && plusPetit(cuseur,cuseur+1))
                                       ^AlgGnomeSort:10: error: not found: value cuseur
				cuseur=cuseur-1;
                                ^AlgGnomeSort:13: error: not found: value cuseur
			echange(cuseur+1,cuseur-1);
                                ^AlgGnomeSort:15: error: not found: value cuseur
			cuseur = cuseur-1;
                        ^AlgGnomeSort:18: error: not found: value cuseur
	}while(hasSwap && cuseur ==1)
                          ^