sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	var curseur:Int = getNombreValeurs()-1;
	var hasSwap: Boolean = false;
	do
	{
		hasSwap = false;
		if(plusPetit(curseur-1,cuseur) && plusPetit(cuseur,cuseur+1))
			{
				cuseur=cuseur-1;
			}
		else{
			echange(cuseur+1,cuseur-1);
			hasSwap = true;
			cuseur = cuseur-1;
			
		}
	}while(hasSwap && cuseur ==1)
	
}
